[tool.poetry]
name = "gym optimization"
version = "0.1.0"
description = ""
authors = ["Icosahedron-puzzle <jbh_2015@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
